add logo and some fixs

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,17 +3,17 @@
 {% block content %}
 
 <div class="row border rounded shadow p-3">
-    <div class="mt-5 col-sm">
-        <section>
-            <div class="container">
-                {% include 'task_form.html' %}
-            </div>
-        </section>
-    </div>
-    <div class="col-sm mt-5">
+    <div class="col-sm p-5">
         <section>
             <div class="container">
                 {% include 'prj_form.html' %}
+            </div>
+        </section>
+    </div>
+    <div class="col-sm p-5">
+        <section>
+            <div class="container">
+                {% include 'task_form.html' %}
             </div>
         </section>
     </div>
